tests/literal_subtype_checking/literal_subtype_checking.exp
Error ------------------------------------------------------------------------------------------------------ test.js:9:8

string literal `bar` [1] is incompatible with string literal `foo` [2]. [incompatible-type]

   test.js:9:8
   9|   case 'bar': // Error
             ^^^^^ [1]

References:
   test.js:4:16
   4| declare var x: Literal;
                     ^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:10:8

number literal `1` [1] is incompatible with string literal `foo` [2]. [incompatible-type]

   test.js:10:8
   10|   case 1: // Error
              ^ [1]

References:
   test.js:4:16
    4| declare var x: Literal;
                      ^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:16:8

Cannot compare string [1] with property `p` of object type [2] because string [1] is incompatible with string literal
`foo` [3]. [incompatible-type]

   test.js:16:8
   16|   case 'bar': // Error
              ^^^^^ [1]

References:
   test.js:5:16
    5| declare var o: {p: Literal}
                      ^^^^^^^^^^^^ [2]
   test.js:5:20
    5| declare var o: {p: Literal}
                          ^^^^^^^ [3]


Error ----------------------------------------------------------------------------------------------------- test.js:17:8

Cannot compare number [1] with property `p` of object type [2] because number [1] is incompatible with string literal
`foo` [3]. [incompatible-type]

   test.js:17:8
   17|   case 1: // Error
              ^ [1]

References:
   test.js:5:16
    5| declare var o: {p: Literal}
                      ^^^^^^^^^^^^ [2]
   test.js:5:20
    5| declare var o: {p: Literal}
                          ^^^^^^^ [3]


Error ---------------------------------------------------------------------------------------------------- test.js:22:11

string literal `bar` [1] is incompatible with string literal `foo` [2]. [incompatible-type]

   test.js:22:11
   22| if (x === 'bar') {} // Error
                 ^^^^^ [1]

References:
   test.js:4:16
    4| declare var x: Literal;
                      ^^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- test.js:23:11

number literal `1` [1] is incompatible with string literal `foo` [2]. [incompatible-type]

   test.js:23:11
   23| if (x === 1) {} // Error
                 ^ [1]

References:
   test.js:4:16
    4| declare var x: Literal;
                      ^^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- test.js:26:13

Cannot compare string [1] with property `p` of object type [2] because string [1] is incompatible with string literal
`foo` [3]. [incompatible-type]

   test.js:26:13
   26| if (o.p === 'bar') {} // Error
                   ^^^^^ [1]

References:
   test.js:5:16
    5| declare var o: {p: Literal}
                      ^^^^^^^^^^^^ [2]
   test.js:5:20
    5| declare var o: {p: Literal}
                          ^^^^^^^ [3]


Error ---------------------------------------------------------------------------------------------------- test.js:27:13

Cannot compare number [1] with property `p` of object type [2] because number [1] is incompatible with string literal
`foo` [3]. [incompatible-type]

   test.js:27:13
   27| if (o.p === 1) {} // Error
                   ^ [1]

References:
   test.js:5:16
    5| declare var o: {p: Literal}
                      ^^^^^^^^^^^^ [2]
   test.js:5:20
    5| declare var o: {p: Literal}
                          ^^^^^^^ [3]


Error ---------------------------------------------------------------------------------------------------- test.js:30:29

string literal `bar` [1] is incompatible with string literal `foo` [2]. [incompatible-type]

   test.js:30:29
   30| if (true && (false || x === 'bar')) {} // Error
                                   ^^^^^ [1]

References:
   test.js:4:16
    4| declare var x: Literal;
                      ^^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- test.js:31:31

Cannot compare string [1] with property `p` of object type [2] because string [1] is incompatible with string literal
`foo` [3]. [incompatible-type]

   test.js:31:31
   31| if (true && (false || o.p === 'bar')) {} // Error
                                     ^^^^^ [1]

References:
   test.js:5:16
    5| declare var o: {p: Literal}
                      ^^^^^^^^^^^^ [2]
   test.js:5:20
    5| declare var o: {p: Literal}
                          ^^^^^^^ [3]


Error ---------------------------------------------------------------------------------------------------- test.js:32:29

number literal `1` [1] is incompatible with string literal `foo` [2]. [incompatible-type]

   test.js:32:29
   32| if (true && (false || x === 1)) {} // Error
                                   ^ [1]

References:
   test.js:4:16
    4| declare var x: Literal;
                      ^^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- test.js:33:31

Cannot compare number [1] with property `p` of object type [2] because number [1] is incompatible with string literal
`foo` [3]. [incompatible-type]

   test.js:33:31
   33| if (true && (false || o.p === 1)) {} // Error
                                     ^ [1]

References:
   test.js:5:16
    5| declare var o: {p: Literal}
                      ^^^^^^^^^^^^ [2]
   test.js:5:20
    5| declare var o: {p: Literal}
                          ^^^^^^^ [3]


Error ---------------------------------------------------------------------------------------------------- test.js:41:10

string literal `bar` [1] is incompatible with string literal `foo` [2]. [incompatible-type]

   test.js:41:10
   41|     case 'bar': // Error
                ^^^^^ [1]

References:
   test.js:35:25
   35| declare var nullableX: ?Literal;
                               ^^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- test.js:42:10

number literal `1` [1] is incompatible with string literal `foo` [2]. [incompatible-type]

   test.js:42:10
   42|     case 1: // Error
                ^ [1]

References:
   test.js:35:25
   35| declare var nullableX: ?Literal;
                               ^^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- test.js:48:10

Cannot compare string [1] with property `p` of nullable object type [2] because string [1] is incompatible with string
literal `foo` [3]. [incompatible-type]

   test.js:48:10
   48|     case 'bar': // Error
                ^^^^^ [1]

References:
   test.js:36:24
   36| declare var nullableO: ?{p: Literal}
                              ^^^^^^^^^^^^^ [2]
   test.js:36:29
   36| declare var nullableO: ?{p: Literal}
                                   ^^^^^^^ [3]


Error ---------------------------------------------------------------------------------------------------- test.js:49:10

Cannot compare number [1] with property `p` of nullable object type [2] because number [1] is incompatible with string
literal `foo` [3]. [incompatible-type]

   test.js:49:10
   49|     case 1: // Error
                ^ [1]

References:
   test.js:36:24
   36| declare var nullableO: ?{p: Literal}
                              ^^^^^^^^^^^^^ [2]
   test.js:36:29
   36| declare var nullableO: ?{p: Literal}
                                   ^^^^^^^ [3]


Error ---------------------------------------------------------------------------------------------------- test.js:56:21

string literal `bar` [1] is incompatible with string literal `foo` [2]. [incompatible-type]

   test.js:56:21
   56|   if (nullableX === 'bar') {} // Error
                           ^^^^^ [1]

References:
   test.js:35:25
   35| declare var nullableX: ?Literal;
                               ^^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- test.js:57:21

number literal `1` [1] is incompatible with string literal `foo` [2]. [incompatible-type]

   test.js:57:21
   57|   if (nullableX === 1) {} // Error
                           ^ [1]

References:
   test.js:35:25
   35| declare var nullableX: ?Literal;
                               ^^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- test.js:60:24

Cannot compare string [1] with property `p` of nullable object type [2] because string [1] is incompatible with string
literal `foo` [3]. [incompatible-type]

   test.js:60:24
   60|   if (nullableO?.p === 'bar') {} // Error
                              ^^^^^ [1]

References:
   test.js:36:24
   36| declare var nullableO: ?{p: Literal}
                              ^^^^^^^^^^^^^ [2]
   test.js:36:29
   36| declare var nullableO: ?{p: Literal}
                                   ^^^^^^^ [3]


Error ---------------------------------------------------------------------------------------------------- test.js:61:24

Cannot compare number [1] with property `p` of nullable object type [2] because number [1] is incompatible with string
literal `foo` [3]. [incompatible-type]

   test.js:61:24
   61|   if (nullableO?.p === 1) {} // Error
                              ^ [1]

References:
   test.js:36:24
   36| declare var nullableO: ?{p: Literal}
                              ^^^^^^^^^^^^^ [2]
   test.js:36:29
   36| declare var nullableO: ?{p: Literal}
                                   ^^^^^^^ [3]


Error ---------------------------------------------------------------------------------------------------- test.js:66:39

string literal `bar` [1] is incompatible with string literal `foo` [2]. [incompatible-type]

   test.js:66:39
   66|   if (true && (false || nullableX === 'bar')) {} // Error
                                             ^^^^^ [1]

References:
   test.js:35:25
   35| declare var nullableX: ?Literal;
                               ^^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- test.js:67:42

Cannot compare string [1] with property `p` of nullable object type [2] because string [1] is incompatible with string
literal `foo` [3]. [incompatible-type]

   test.js:67:42
   67|   if (true && (false || nullableO?.p === 'bar')) {} // Error
                                                ^^^^^ [1]

References:
   test.js:36:24
   36| declare var nullableO: ?{p: Literal}
                              ^^^^^^^^^^^^^ [2]
   test.js:36:29
   36| declare var nullableO: ?{p: Literal}
                                   ^^^^^^^ [3]


Error ---------------------------------------------------------------------------------------------------- test.js:68:39

number literal `1` [1] is incompatible with string literal `foo` [2]. [incompatible-type]

   test.js:68:39
   68|   if (true && (false || nullableX === 1)) {} // Error
                                             ^ [1]

References:
   test.js:35:25
   35| declare var nullableX: ?Literal;
                               ^^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- test.js:69:42

Cannot compare number [1] with property `p` of nullable object type [2] because number [1] is incompatible with string
literal `foo` [3]. [incompatible-type]

   test.js:69:42
   69|   if (true && (false || nullableO?.p === 1)) {} // Error
                                                ^ [1]

References:
   test.js:36:24
   36| declare var nullableO: ?{p: Literal}
                              ^^^^^^^^^^^^^ [2]
   test.js:36:29
   36| declare var nullableO: ?{p: Literal}
                                   ^^^^^^^ [3]



Found 24 errors
